# luskctl

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  REUSE.toml  build_script.py  mkdocs.yml  pyproject.toml  setup.py  tach.toml  test_reuse_compliance.py  vulture_whitelist.py
.github/: copilot-instructions.md  dependabot.yml  requirements-ci.txt
.github/workflows/: ci.yml  docs.yml  release.yml
LICENSES/: Apache-2.0.txt
completions/: codexctl  luskctl  terokctl
docs/: CONTAINER_LAYERS.md  CONTAINER_LIFECYCLE.md  DEVELOPER.md  GIT_CACHE_AND_SECURITY_MODES.md  LOGIN_DESIGN.md  OPENCODE_CUSTOM.md  PACKAGING.md  SHARED_DIRS.md  USAGE.md  agent-compat-matrix.md  concepts.md  container-lifecycle.md  developer.md  gen_mermaid_zoom.py  gen_quality_report.py  gen_ref_pages.py  git-gate-and-security-modes.md  index.md  shared-dirs.md  usage.md
docs/brainstorming/: per-task-context-isolation.md  todo-agent-helpers.md
docs/javascripts/: mermaid-config.js  mermaid-config.mjs
docs/stylesheets/: extra.css
examples/: codexctl-config.yml  luskctl-config.yml  opencode-custom-example.json  terok-config.yml
examples/alpaka3/: project.yml
examples/hooks/: toad-port-forward.sh
examples/teams/: infra-dev-team.yml
examples/uc/: project.yml  user.dockerinclude
site/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
site/CONTAINER_LAYERS/: index.html
site/DEVELOPER/: index.html
site/GIT_CACHE_AND_SECURITY_MODES/: index.html
site/PACKAGING/: index.html
site/SHARED_DIRS/: index.html
site/USAGE/: index.html
site/search/: search_index.json
src/codexctl/: __init__.py  cli.py  config.py  docker.py  git_cache.py  lib.py  paths.py  projects.py  ssh.py  tasks.py  tui.py  widgets.py
src/luskctl/: __init__.py  _branch_info.py
src/terok/: __init__.py
tests/: conftest.py  constants.py  test_config.py  test_docker.py  test_git_cache.py  test_projects.py  test_ssh.py  test_tasks.py  test_utils.py  testcli.py  testgate.py  testgit.py
tests/cli/: test_cli_autopilot.py  test_cli_completions.py  test_cli_config.py  test_cli_gate_server.py  test_cli_module.py  test_cli_shield.py  test_cli_sickbay.py  test_cli_wizard.py  test_cli_workflows.py
tests/containers/: Containerfile.debian12  Containerfile.debian13  Containerfile.fedora43  Containerfile.podman  Containerfile.ubuntu2404  run-matrix.sh
tests/gate/: test_server.py
tests/integration/: conftest.py  helpers.py  test_bypass_connectivity.py  test_container_e2e.py  test_shield_no_podman.py  test_shield_podman.py
tests/lib/: __init__.py  test_agent_config.py  test_config.py  (+32 more)
(+382 files in other folders)
